# padd-pda

./: .gitignore  CMakeLists.txt  README.md  build.sh  roadmap.md
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake  __FindX11.cmake
include/: app.h  event.h  font.h  pda.h  renderutil.h  soareds.h  state.h  timer.h  widget.h  window.h
include/apps/: PDAApp.h  pdaclock.h
include/widget/: button.h  polygon.h  widget.h
include/wx/: wx.h
src/: app.cpp  event.cpp  main.cpp  pda.cpp  renderutil.cpp  soareds.cpp  state.cpp  timer.cpp  window.cpp
src/system/: widget.cpp
toolchain/: aarch64-unknown-linux.cmake
